[package]
name = "eversake-swqos-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
quinn = "0.11.3"
rustls = { version = "0.23.15", default-features = false }
bincode = "1.3.3"
solana-tls-utils = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
